# wecom-audit

./: .gitignore  .pypirc.template  CMakeLists.txt  README.md  build.sh  config.example.json  main.cc  main.py  setup.py  test_files_download.py  wecom_audit.h  wecom_build_publish.sh
.github/workflows/: openhands-resolvers.yml
wecom_audit/: __init__.py
